fixed footer positioning on smaller screens

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -54,7 +54,7 @@
   border-radius: 25px;
   width: 75%;
   height: 50px;
-  margin-right: 1.5rem;
+  margin-left: 1.5rem;
   font-size: 25px;
   padding-left: .75rem;
 }
@@ -230,6 +230,7 @@ h1 {
 
 .Error-message {
   font-size: 50px;
+  padding-left: 2rem;
 }
 
 .App-link {
@@ -329,6 +330,11 @@ footer {
   .Nav-Buttons-One {
     margin-right: 1rem;
   }
+
+  footer {
+    position: relative;
+    flex-shrink: 0;
+  }
 }
 
 @media (max-width: 760px) {
@@ -363,7 +369,6 @@ footer {
   .Nav-Buttons-One {
     margin-right: 8rem;
   }
-
 }
 
 
